@startuml

title __VIEWEVENT's Class Diagram__\n

  namespace com.itbird {
    namespace view {
      namespace vent {
        class com.itbird.viewEvent.MyLayout {
            {static} - TAG : String
            + MyLayout()
            + MyLayout()
            + MyLayout()
            + onInterceptTouchEvent()
            + onTouchEvent()
            # dispatchHoverEvent()
        }
      }
    }
  }
  

  namespace com.itbird {
    namespace view {
      namespace vent {
        class com.itbird.viewEvent.MyView {
            {static} - TAG : String
            + MyView()
            + MyView()
            + MyView()
            # dispatchHoverEvent()
        }
      }
    }
  }
  

  namespace com.itbird {
    namespace view {
      namespace vent {
        class com.itbird.viewEvent.ViewEventTestActivity {
            - TAG : String
            # onCreate()
        }
      }
    }
  }
  

  com.itbird.viewEvent.MyLayout -up-|> android.widget.LinearLayout
  com.itbird.viewEvent.MyView -up-|> androidx.appcompat.widget.AppCompatImageView
  com.itbird.viewEvent.ViewEventTestActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
